<resources>
    <string name="app_name">P3 Geography Quiz</string>
    <string name="rhetorical">How Much Do You Know About The World?</string>
    <string name="reset">Try\nagain☺</string>
    <string name="did_you_know">Did you know?</string>
    <string name="q1">Q1: What are the 3 oceans that border Canada?</string>
    <string name="q1_a">Arctic Ocean</string>
    <string name="q1_b">Indian Ocean</string>
    <string name="q1_c">Pacific Ocean</string>
    <string name="q1_d">Southern Ocean</string>
    <string name="q1_e">Atlantic Ocean</string>
    <string name="submit">Submit</string>
    <string name="accurate">True</string>
    <string name="inaccurate">False</string>
    <string name="q2">Q2: The Caspian Sea is a lake and not a sea.</string>
    <string name="q3">Q3: What country is also a continent?</string>
    <string name="q4">Q4: Which countries occupy the Scandinavian Peninsula?</string>
    <string name="q4_a">Denmark</string>
    <string name="q4_b">Sweden</string>
    <string name="q4_c">Finland</string>
    <string name="q4_d">Norway</string>
    <string name="q4_e">Estonia</string>
    <string name="q5">Q5: 90% of the worlds population can be found in the Southern Hemisphere.</string>
    <string name="q6">Q6: Beijing is the capital city of which Asian country?</string>
    <string name="editText">Type your answer here</string>
    <string name="affirmative">Yes</string>
    <string name="negative">No</string>
</resources>
